<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="id.andra.doqu_store.presentation.ui.activity.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/x3"
        android:paddingVertical="@dimen/x2">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/img_doqu_store_logo"
            app:layout_constraintBottom_toTopOf="@id/txtTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txtTitle"
            style="@style/TextHeadingS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x1"
            android:text="@string/title_login"
            app:layout_constraintBottom_toTopOf="@id/layoutEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <LinearLayout
            android:id="@+id/layoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/layoutPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle">

            <TextView
                style="@style/TextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email" />

            <EditText
                android:id="@+id/inputEmail"
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x1"
                android:autofillHints="emailAddress"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/errorEmail"
                style="@style/TextCaptionMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/danger_main"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutEmail">

            <TextView
                style="@style/TextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password" />

            <LinearLayout
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputPassword"
                    style="@style/TextBody2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/x1"
                    android:layout_weight="1"
                    android:autofillHints="password"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

                <ImageButton
                    android:id="@+id/btnTogglePassword"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_eye" />

            </LinearLayout>

            <TextView
                android:id="@+id/errorPassword"
                style="@style/TextCaptionMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/danger_main"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/ButtonL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x3"
            android:background="@drawable/btn_primary"
            android:text="@string/title_login"
            app:layout_constraintBottom_toTopOf="@id/textRedirectSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

        <TextView
            android:id="@+id/textRedirectSignUp"
            style="@style/TextRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:text="@string/redirect_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>