<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="id.andra.doqu_store.presentation.ui.fragment.editPassword.EditPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/border_bottom"
            android:paddingHorizontal="@dimen/x3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ripple"
                android:contentDescription="@string/img_desc"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextBody1Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x1"
                android:text="@string/edit_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="@dimen/x3"
            android:paddingVertical="@dimen/x2"
            app:layout_constraintBottom_toTopOf="@id/bottombar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navbar">

            <LinearLayout
                android:id="@+id/layoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x2"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_password" />

                <LinearLayout
                    style="@style/Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputPassword"
                        style="@style/TextBody2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/x1"
                        android:layout_weight="1"
                        android:autofillHints="password"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />

                    <ImageButton
                        android:id="@+id/btnTogglePassword"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/img_desc"
                        android:src="@drawable/ic_eye" />

                </LinearLayout>

                <TextView
                    android:id="@+id/errorPassword"
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/danger_main"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x2"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutPassword">

                <TextView
                    style="@style/TextCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_new_password" />

                <LinearLayout
                    style="@style/Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputNewPassword"
                        style="@style/TextBody2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/x1"
                        android:layout_weight="1"
                        android:autofillHints="password"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_new_password"
                        android:inputType="textPassword" />

                    <ImageButton
                        android:id="@+id/btnToggleNewPassword"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/img_desc"
                        android:src="@drawable/ic_eye" />

                </LinearLayout>

                <TextView
                    android:id="@+id/errorNewPassword"
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/danger_main"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPasswordConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x2"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutNewPassword">

                <TextView
                    style="@style/TextCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_password_confirm" />

                <LinearLayout
                    style="@style/Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputPasswordConfirm"
                        style="@style/TextBody2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/x1"
                        android:layout_weight="1"
                        android:autofillHints="password"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_password_confirm"
                        android:inputType="textPassword" />

                    <ImageButton
                        android:id="@+id/btnTogglePasswordConfirm"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/img_desc"
                        android:src="@drawable/ic_eye" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/bottombar"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottombarSize"
            android:background="@drawable/border_top"
            android:gravity="center"
            android:paddingHorizontal="@dimen/x3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/body">

            <Button
                android:id="@+id/btnSubmit"
                style="@style/ButtonL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_primary"
                android:text="@string/save_changes" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>