<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="id.andra.doqu_store.presentation.ui.activity.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/border_bottom"
            android:paddingHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextBody1Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome, John"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnCart"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/img_desc"
                android:padding="4dp"
                android:src="@drawable/ic_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnLogout"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/img_desc"
                android:padding="4dp"
                android:src="@drawable/ic_logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainer"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/bottombar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navbar"
            app:navGraph="@navigation/nav_graph" />

        <LinearLayout
            android:id="@+id/bottombar"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottombarSize"
            android:background="@drawable/border_top"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="1dp"
            android:visibility="@{viewModel.state.showBottomBar ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_home" />

                <TextView
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:text="@string/home" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnAnnouncement"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_speaker" />

                <TextView
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:text="@string/announcement" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnHistory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_receipt_item" />

                <TextView
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:text="@string/history" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnNotification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_notification" />

                <TextView
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:text="@string/notification" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_profile" />

                <TextView
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:text="@string/profile" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>